- trying to connect with no server selected will now bring up a dialog
  asking user to select a server
- fixed Sleep bug with sublist used on read-only arrays (this was 
  breaking /names in some jIRCii scripts)
- reworked timer code to prevent concurrent modification exceptions
  caused by timers making timers or stopping timers during their
  execution

Beta    43 release 9 May 08
====
- fixed alpha order of some aliases in the Help -> Commands menu
- jIRCii now creates the DCC receive directory if the directory
  does not exist.
- replaced call to skip with in Send.java with skipFully provided by
  nanaki at gmail.com using Find Bugs http://findbugs.sourceforge.net/
- implemented /kill <nick> <reason> command
- updated scripting engine to Sleep 2.1-b25.  
- added a check to the word wrapping code to prevent infinite recursion
  when the window becomes too small.

Beta    42 release 26 Nov 07
====
- Fixed a MacOS X 10.5 (leopard) issue with font metrics.  This is a work
  around to force jIRCii to use the Quartz renderer in lieu of the Sun
  renderer.  I don't know why the Sun one is broken.  Sun: what is up?
- Upgraded to Sleep 2.1-b20.  Lots of changes.  Again view the changelog:
  http://sleep.hick.org/changelog.html
- updated CTCP SOURCE reply and internal help documentation to reflect
  current information and URLs
- added a WALLOPS and SEND_WALLOPS sets; updated the default.irc script to
  include these.  also fixed /wallops; per request of drakx
- improved the menubar refresh for server switches by a small factor; 
  ideally I'd like to eliminate this issue but it will take some code
  restructuring to do this.  this is mostly an issue on MacOS X where
  menubar changes take effect immediately (unlike other platforms *ahem*)
- on disconnect the statusbar now immediately shows nick as <Unknown>
- bound Meta+H and Meta+O to open the help and option dialogs
- reconnect now uses the last nickname you held; not your default nick